--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -21,11 +21,46 @@
         margin-top: 100px;
     }
 
+    #topBox {
+        background-color: #dddddd;
+    }
+
+    #topBox ul {
+        list-style-type:none;
+        margin:0;
+        padding:0;
+        overflow:hidden;
+        text-align: right;
+    }
+
+    #topBox ul li {
+        display: inline-block;
+        padding-right: 20px;
+        margin: 5px;
+    }
+
+    #topBox ul li a {
+        display: block;
+        font-size: 25px;
+        cursor: pointer;
+    }
+
+    #topBox ul li a:link {
+        color: grey;
+        text-decoration: none;
+    }
+
+    #topBox ul li a:hover {
+        color: black;
+        text-decoration: none;
+    }
+
     #leftBox, #rightBox {
         display: inline-block;
         height: 800px;
         vertical-align: top;
         overflow-y: hidden;
+        background-color: white;
     }
 
     #leftBox {
@@ -34,7 +69,7 @@
     }
 
     #rightBox {
-        width: 900px;
+        width: 100%;
     }
 
     #currentUserInfo {
@@ -760,6 +795,120 @@
 
     #form .chat-upload-file .el-upload-list {
         display: none !important;
+    }
+
+    .loginFrame , .RegisterFrame {
+        display: none;
+        position: fixed;
+        z-index: 10000;
+        width: 800px;
+        height: 400px;
+        background-color: grey;
+        left: 50%;
+        top: 50%;
+        margin-left: -400px;
+        margin-top: -200px;
+        padding: 56px 100px 52px;
+    }
+
+    .submit-btn {
+        display: inline-block;
+        width: 100%;
+        font-size: 30px;
+        border-radius: initial;
+        border-color: black;
+        border: 1px solid #000 !important;
+        padding: 12px 18px !important;
+        text-align: center;
+    }
+
+    .form-top {
+        text-align: right;
+    }
+
+    .close-btn {
+        display: inline-block;
+        font-size: 25px;
+    }
+
+    .close-btn:link {
+        color: white;
+        text-decoration: none;
+    }
+
+    .close-btn:hover {
+        color: black;
+        text-decoration: none;
+        background-color: white;
+    }
+
+    .submit-btn:link {
+        color: white;
+        text-decoration: none;
+    }
+
+    .submit-btn:hover {
+        color: black;
+        text-decoration: none;
+        background-color: white;
+    }
+
+    .loginFrame label, .RegisterFrame label {
+        display: inline-block;
+        max-width: 100%;
+        margin-bottom: 5px;
+        font-weight: 700;
+    }
+    .form-lr-input-style {
+        border: 1px solid #000 !important;
+        background-color: #4f4f4f !important;
+        color: #c8c8cc !important;
+        -webkit-border-radius: 4px !important;
+        -moz-border-radius: 4px !important;
+        border-radius: 4px !important;
+        padding: 12px 18px !important;
+        outline: 0 !important;
+        width: 200px;
+        height: auto;
+        font-size: 14px !important;
+        text-shadow: none;
+        -webkit-text-shadow: none;
+        -moz-text-shadow: none;
+        -o-text-shadow: none;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        -o-box-shadow: none;
+    }
+
+    .form-control {
+        display: block;
+        width: 100%;
+        height: 34px;
+        padding: 6px 12px;
+        font-size: 14px;
+        line-height: 1.42857143;
+        color: #555;
+        background-color: #fff;
+        background-image: none;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+        -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+        -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    }
+
+    .loginFrame .form-group, .RegisterFrame .form-group {
+        margin-bottom: 30px;
+    }
+
+    .username , .password {
+        font-size: 16px !important;
+        color: white;
+        font-weight: 400;
+        padding-bottom: 10px;
     }
 
 @media screen and (max-width: 1199px) {
