--- a/template/home.html
+++ b/template/home.html
@@ -3,7 +3,6 @@
 <head>
 <title>GGAC-私信</title>
 <link rel="stylesheet" type="text/css" href="http://pre-cdn.ggac.net/lib/css/toastr-2.1.3.min.css">
-<link rel="stylesheet" type="text/css" href="static/css/jquery.mCustomScrollbar.css">
 <!--<link rel="stylesheet" type="text/css" href="http://pre-cdn.ggac.net/lib/css/element-ui-2.2.2.css">-->
 <link rel="stylesheet" type="text/css" href="static/css/chat.css">
 </head>
@@ -29,11 +28,11 @@
             </div>
             <div class="form-group">
                 <label for="username" class="username">用户名</label>
-                <input id="username" v-model="username" name="username" maxlength="20" class="form-control form-lr-input-style" type="text">
+                <input id="username-login" v-model="username" name="username" maxlength="20" class="form-control form-lr-input-style" type="text">
             </div>
             <div class="form-group">
                 <label for="password" class="password">密码</label>
-                <input id="password" v-model="password" name="password" class="form-control form-lr-input-style" type="password">
+                <input id="password-login" v-model="password" name="password" class="form-control form-lr-input-style" type="password">
             </div>
             <a type="submit" href="javascript:;" class="submit-btn" @click="login">登录</a>
         </div>
@@ -43,11 +42,11 @@
             </div>
             <div class="form-group">
                 <label for="username" class="username">用户名</label>
-                <input id="username" v-model="username" name="username" maxlength="20" class="form-control form-lr-input-style" type="text">
+                <input id="username-register" v-model="username" name="username" maxlength="20" class="form-control form-lr-input-style" type="text">
             </div>
             <div class="form-group">
                 <label for="password" class="password">密码</label>
-                <input id="password" v-model="password" name="password" class="form-control form-lr-input-style" type="password">
+                <input id="password-register" v-model="password" name="password" class="form-control form-lr-input-style" type="password">
             </div>
             <a type="submit" href="javascript:;" class="submit-btn" @click="Register">注册</a>
         </div>
@@ -57,7 +56,6 @@
 <script src="http://pre-cdn.ggac.net/lib/js/vue-2.5.13.min.js"></script>
 <script src="http://pre-cdn.ggac.net/lib/js/toastr-2.1.3.min.js"></script>
 <script type="text/javascript" src="static/js/jquery.mousewheel.min.js"></script>
-<script type="text/javascript" src="static/js/jquery.mCustomScrollbar.js"></script>
 <script type="text/javascript" src="static/js/jquery-browser.js"></script>
 <!--<script type="text/javascript" src="http://pre-cdn.ggac.net/lib/js/element-ui-2.2.2.js"></script>-->
 <script type="text/javascript" src="http://pre-cdn.ggac.net/lib/js/vue-lazyload-1.2.3.js"></script>
