[FIX]add room leave time

--- a/template/home.html
+++ b/template/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>GGAC-私信</title>
+<title>TEST</title>
 <link rel="stylesheet" type="text/css" href="http://pre-cdn.ggac.net/lib/css/toastr-2.1.3.min.css">
 <!--<link rel="stylesheet" type="text/css" href="http://pre-cdn.ggac.net/lib/css/element-ui-2.2.2.css">-->
 <link rel="stylesheet" type="text/css" href="static/css/chat.css">
