--- a/template/home.html
+++ b/template/home.html
@@ -3,7 +3,6 @@
 <head>
 <title>TEST</title>
 <link rel="stylesheet" type="text/css" href="http://pre-cdn.ggac.net/lib/css/toastr-2.1.3.min.css">
-<!--<link rel="stylesheet" type="text/css" href="http://pre-cdn.ggac.net/lib/css/element-ui-2.2.2.css">-->
 <link rel="stylesheet" type="text/css" href="static/css/chat.css">
 </head>
 <body>
@@ -52,7 +51,7 @@
         </div>
     </div>
 </body>
-<script src="static/js/jquery.min.js"></script>
+<script src="/static/js/jquery.min.js"></script>
 <script src="http://pre-cdn.ggac.net/lib/js/vue-2.5.13.min.js"></script>
 <script src="http://pre-cdn.ggac.net/lib/js/toastr-2.1.3.min.js"></script>
 <script type="text/javascript" src="static/js/jquery.mousewheel.min.js"></script>
